--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AirBnB Clone</title>
 </head>
 <body style="height: 10000px;">
-    <header style="background-color:  #FF0000; height: 70px; width: 100%; margin-top: 0;">
+    <header style="position: absolute; background-color:  #FF0000; height: 70px; width: 100%; top: 0; left: 0;">
     </header>
 
-    <footer style = "background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute;">
-        <p class="foot-text" style="text-align: center; margin-left: auto; margin-right: auto; padding-bottom: 20px;">Best School</p>
+    <footer style = "background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute; left: 0;">
+        <p class="foot-text" style="text-align: center; padding-top: 5px; padding-bottom: 20px;">Best School</p>
     </footer>
 </body>
 </html>
