Completed location dropdown

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
+    <!-- images -->
+    <link rel="shortcut icon" href="/images/icon.png" type="image/png">
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="/styles/3-header.css">
+    <link rel="stylesheet" href="/styles/3-common.css">
+    <link rel="stylesheet" href="/styles/3-footer.css">
 </head>
-<!-- favicon -->
-<link rel="shortcut icon" href="/images/icon.png" type="image/png">
 
 <!-- stylesheet -->
-<link rel="stylesheet" href="/styles/3-header.css">
-<link rel="stylesheet" href="/styles/3-common.css">
-<link rel="stylesheet" href="/styles/3-footer.css">
-<!-- stylesheet -->
 <body>
-    <!-- -------------------------header-------------------- -->
+    <!-- header -->
     <header>
         
     </header>
-    <!-- -------------------------footer-------------------- -->
+    <!-- footer -->
     <footer>
         <p class="foot-text">Best School</p>
     </footer>
