--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
+    <!-- images -->
+    <link rel="shortcut icon" href="/images/icon.png" type="image/png">
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="/styles/3-header.css">
+    <link rel="stylesheet" href="/styles/4-common.css">
+    <link rel="stylesheet" href="/styles/3-footer.css">
+    <link rel="stylesheet" href="/styles/4-filters.css">
 </head>
-<!-- favicon -->
-<link rel="shortcut icon" href="/images/icon.png" type="image/png">
 
 <!-- stylesheet -->
-<link rel="stylesheet" href="/styles/3-header.css">
-<link rel="stylesheet" href="/styles/4-common.css">
-<link rel="stylesheet" href="/styles/3-footer.css">
-<link rel="stylesheet" href="/styles/4-filters.css">
-<!-- stylesheet -->
 <body>
-    <!-- -------------------------header-------------------- -->
+    <!-- header -->
     <header>
 
     </header>
-    <!-- --------------------container------------------------- -->
+    <!-- container -->
     <div class="container">
         <section class="filters">
             <button class="btn">Search</button>
         </section>
     </div>
-    <!-- -------------------------footer-------------------- -->
+    <!-- footer -->
     <footer>
         <p class="foot-text">Best School</p>
     </footer>
