--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
-</head>
-<!-- favicon -->
-<link rel="shortcut icon" href="/images/icon.png" type="image/png">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/images/icon.png" type="image/png">
 
-<!-- stylesheet -->
-<link rel="stylesheet" href="/styles/3-header.css">
-<link rel="stylesheet" href="/styles/4-common.css">
-<link rel="stylesheet" href="/styles/3-footer.css">
-<link rel="stylesheet" href="/styles/5-filters.css">
+    <!--    stylesheet -->
+    <link rel="stylesheet" href="/styles/3-header.css">
+    <link rel="stylesheet" href="/styles/4-common.css">
+    <link rel="stylesheet" href="/styles/3-footer.css">
+    <link rel="stylesheet" href="/styles/5-filters.css">
+</head>
 
 <!-- stylesheet -->
 <body>
-    <!-- -------------------------header-------------------- -->
+    <!-- header -->
     <header>
 
     </header>
-    <!-- --------------------container------------------------- -->
+    <!-- container -->
     <div class="container">
         <section class="filters">
 
-    <!-- -------------------------location-------------------------- -->
+    <!-- location -->
             <div class="locations">
                 <h3 class="filter-header">States</h3>
                 <h4>We offer top notch across...</h4>
             </div>
-    <!-- -------------------------amenity-------------------------- -->
+    <!-- amenity -->
             <div class="amenities">
                 <h3 class="filter-header">Amenities</h3>
                 <h4>Choose From our list of...</h4>
             </div>
-    <!-- -------------------------Search Button-------------------------- -->
+    <!-- Search Button -->
             <button class="btn">Search</button>
         </section>
     </div>
-    <!-- -------------------------footer-------------------- -->
+    <!-- footer -->
     <footer>
         <p class="foot-text">Best School</p>
     </footer>
