Completed amenity dropdown and task 6 as a whole

--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -41,21 +41,17 @@
                     </ul>
                 </ul>
             </div>
+
     <!-- amenity -->
             <div class="amenities">
                 <h3 class="filter-header">Amenities</h3>
                 <h4>Choose From our list of...</h4>
                 <!-- Location DropDown- -->
                     <ul class="popover amenities-drop" type="none">
-                        <li><h2>Lagos</h2></li>
-                        <ul type="none">
-                            <li>Victoria Island</li>
-                        </ul>
-                        <li><h2>Abuja</h2></li>
-                        <ul type="none">
-                            <li>Gwadalaja</li>
-                            <li>city 2</li>
-                        </ul>
+                            <li><p>Internet</p></li>
+                            <li><p>TV</p></li>
+                            <li><p>Kitchen</p></li>
+                            <li><p>Iron</p></li>
                     </ul>
             </div>
 
