--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -31,14 +31,14 @@
                 <!-- Location DropDown- -->
                 <ul class="popover locations-drop" type="none">
                     <li><h2>Lagos</h2></li>
-                    <ul type="none">
-                        <li>Victoria Island</li>
-                    </ul>
+                    <div class="pop-sublist">
+                        <li>Island</li>
+                    </div>
                     <li><h2>Abuja</h2></li>
-                    <ul type="none">
-                        <li>Gwadalaja</li>
+                    <div class="pop-sublist">
+                        <li>City 1</li>
                         <li>city 2</li>
-                    </ul>
+                    </div>
                 </ul>
             </div>
 
