Completed all tasks

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -100,7 +100,8 @@
             </div>
              <!-- User -->
              <div class="user">
-                <p><strong>Owner: </strong>Lopem ipsum dolor sit amet,
+                <p><strong>Owner:</strong> Feranmi Awotubo</p>
+                    <p>ipsum dolor sit amet,
                     Consectetur adipiscing elit.
                     Sed do eiusmod tempor incididunt,
                     Ut labore et dolore magna aliqua.
@@ -149,7 +150,9 @@
             </div>
              <!-- User -->
              <div class="user">
-                <p><strong>Owner: </strong>Lopem ipsum dolor sit amet,
+                <p><strong>Owner:</strong> Feranmi Awotubo</p>
+                <p>
+                    Lopem ipsum dolor sit amet,
                     Consectetur adipiscing elit.
                     Sed do eiusmod tempor incididunt,
                     Ut labore et dolore magna aliqua.
@@ -198,7 +201,8 @@
             </div>
              <!-- User -->
              <div class="user">
-                <p><strong>Owner: </strong>Lopem ipsum dolor sit amet,
+                <p><strong>Owner:</strong> Feranmi Awotubo</p>
+                    <p>Lopem ipsum dolor sit amet,
                     Consectetur adipiscing elit.
                     Sed do eiusmod tempor incididunt,
                     Ut labore et dolore magna aliqua.
